+Add LocationLoader Class

--- a/DAN_XLII_MilosPeric/DAN_XLII_MilosPeric/App.config
+++ b/DAN_XLII_MilosPeric/DAN_XLII_MilosPeric/App.config
@@ -1,3 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-<connectionStrings><add name="WorkerManagementEntities" connectionString="metadata=res://*/Model.WorkerDataBaseModel.csdl|res://*/Model.WorkerDataBaseModel.ssdl|res://*/Model.WorkerDataBaseModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-1NJBBB0\SQLEXPRESS;initial catalog=WorkerManagement;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings></configuration>
+  <connectionStrings>
+    <add name="WorkerManagementEntities" connectionString="metadata=res://*/WorkerDataBaseModel.csdl|res://*/WorkerDataBaseModel.ssdl|res://*/WorkerDataBaseModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-1NJBBB0\SQLEXPRESS;initial catalog=WorkerManagement;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
+</configuration>
