--- a/DAN_XLII_MilosPeric/DAN_XLII_MilosPeric/DAN_XLII_MilosPeric.csproj
+++ b/DAN_XLII_MilosPeric/DAN_XLII_MilosPeric/DAN_XLII_MilosPeric.csproj
@@ -78,7 +78,10 @@
     <Compile Include="tblWorker.cs">
       <DependentUpon>WorkerDataBaseModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="Utility\ActionEvent.cs" />
+    <Compile Include="Utility\ActionEventArgs.cs" />
     <Compile Include="Utility\LocationLoader.cs" />
+    <Compile Include="Utility\Logger.cs" />
     <Compile Include="vwLocation.cs">
       <DependentUpon>WorkerDataBaseModel.tt</DependentUpon>
     </Compile>
